# touchmatrix-pico

./: .gitignore  ADS1114.cpp  ADS1114.h  ADS8866.cpp  ADS8866.h  CMakeLists.txt  shift_register.pio  tm-bridge.cmake  touchmatrix-pico.cpp
config/: common.h  tm2_config.h  tm3dis_config.h  tm4_config.h
include/: ADS8866.h  peripheral.h  transfer.h
pcb_test/: CMakeLists.txt  ads1113.cpp  eval1_board.cpp  ir_led.cpp
pio/: shift_register.pio
resources/: led_map.h  led_map_tm3dis.h
src/: ADS1114.cpp  ADS8866.cpp  peripheral.cpp  touchmatrix-pico-bridge.cpp  touchmatrix-pico.cpp  transfer.cpp
